k8s/media-ingest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: media-ingest
  labels:
    app: media-ingest
    app.kubernetes.io/name: media-ingest
    app.kubernetes.io/part-of: dagster
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 4000
      targetPort: grpc
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
    - name: viewer
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: media-ingest
