k8s/media-ingest/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-explorer
  labels:
    app: media-ingest
    app.kubernetes.io/part-of: catalyst-data
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "data"
    gethomepage.dev/name: "Media Explorer"
    gethomepage.dev/description: "Media Browser"
    gethomepage.dev/group: "Data Services"
    gethomepage.dev/icon: "si-mediafire"
    gethomepage.dev/href: "http://media-explorer.talos00"
    gethomepage.dev/siteMonitor: "http://media-ingest.catalyst-data.svc.cluster.local:8080"
    gethomepage.dev/weight: "3"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`media-explorer.talos00`)
      kind: Rule
      services:
        - name: media-ingest
          port: 8080
